--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tic Tac Toe</title>
+    <title>React-Tac-Toe</title>
   </head>
   <body>
+    <h1>Take turns selecting a square. Click any step to go back.</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
